fixup: Spacing for mobile

--- a/client/src/pages/Flow/Flow.module.scss
+++ b/client/src/pages/Flow/Flow.module.scss
@@ -558,7 +558,8 @@
 .d_flex_space_between {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 1rem;
 
   &:last-child {
     margin-bottom: 0.5rem;
